--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,7 +44,8 @@ img {
 .container {
   height: 100%;
   max-width: 1100px;
-  margin: auto;
+  /* margin: auto; */
+  margin: 64px;
   overflow: hidden;
   padding: 0 2rem;
 }
