--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,7 +45,7 @@ img {
   height: 100%;
   max-width: 1100px;
   /* margin: auto; */
-  /* margin: 64px; */
+  margin-top: 64px;
   overflow: hidden;
   padding: 0 2rem;
 }
