--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,7 +45,7 @@ img {
   height: 100%;
   max-width: 1100px;
   /* margin: auto; */
-  margin-top: 64px;
+  margin-top: 94px;
   overflow: hidden;
   padding: 0 0.5rem;
 }
@@ -466,4 +466,13 @@ table th {
   .drawboard {
     display: none !important;
   }
+}
+
+.page-title {
+  display: block !important;
+  text-align: center !important;
+  font-size: 2rem;
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-bottom: 30px;
 }
