--- a/client/src/App.css
+++ b/client/src/App.css
@@ -469,6 +469,12 @@ table th {
   }
 }
 
+@media (max-width: 990px) {
+  .HomeCard {
+    max-width: 550px;
+  }
+}
+
 .page-title {
   display: block !important;
   text-align: center !important;
@@ -476,4 +482,14 @@ table th {
   margin-top: 10px;
   margin-left: 30px;
   margin-bottom: 30px;
+}
+
+.carousel-indicators{
+  margin-bottom: 0px;
+  z-index: 1;
+}
+
+
+.active{
+  background-color: #fa923f !important;
 }
