--- a/client/src/App.css
+++ b/client/src/App.css
@@ -493,3 +493,10 @@ table th {
 .active{
   background-color: #fa923f !important;
 }
+
+.progress-bar{
+  background-color: #fa923f;
+  border: 0px;
+  border-right: 1px black;
+  border-style: solid;
+}
