--- a/client/src/App.css
+++ b/client/src/App.css
@@ -500,3 +500,18 @@ table th {
   border-right: 1px black;
   border-style: solid;
 }
+
+.bs-popover-auto[x-placement^=bottom]>.arrow::after, .bs-popover-bottom>.arrow::after{
+  border-bottom-color: black
+}
+
+.bs-popover-auto[x-placement^=bottom] .popover-header::before, .bs-popover-bottom .popover-header::before{
+  border-bottom: 1px solid black;
+}
+.bs-popover-auto[x-placement^=top] .popover-header::before, .bs-popover-top .popover-header::before{
+  border-top: 1px solid black;
+}
+
+.bs-popover-auto[x-placement^=top]>.arrow::after, .bs-popover-top>.arrow::after {
+  border-top-color: black
+}
